create insert, update, delete function
