# api/interface.go
@@ -10,4 +10,7 @@ import (
 type MemberService interface {
 	FindById(ctx context.Context, id int64) (member.MemberResponse, error)
 	FindAll(ctx context.Context, param service.SqlParameter) ([]member.MemberResponse, service.Pagination, error)
+	CreateMember(ctx context.Context, data *member.MemberRequest) (member.MemberResponse, error)
+	UpdateMember(ctx context.Context, id int64, data *member.MemberRequest) (member.MemberResponse, error)
+	DeleteMember(ctx context.Context, id int64) (bool, error)
 }
